addons/mail/static/src/scss/mail_activity.scss
/* Common */
.o_mail_activity {
    &.o_field_widget {
        display: block;
    }
}

/* list_activity widget */
.o_list_view {
    .o_list_table tbody > tr {
        > td.o_data_cell.o_list_activity_cell {
            .o_mail_activity {
                display: flex;
                max-width: 275px;
                .o_activity_btn {
                    margin-right: 3px;
                }
                .o_activity_summary {
                    @include o-text-overflow;
                }
            }
        }
    }
}

/* Kanban View */
.o_kanban_record{
    .o_kanban_inline_block {
        display: inline-block;
    }
}

.o_kanban_record, .o_view_controller{
    .o_mail_activity {
        .o_activity_btn {
            span.fa {
                overflow: visible;
                line-height: 1;
                vertical-align: middle;
            }
        }

        div.o_activity {
            min-width: 290px;
            padding: 0px 0px;

            .o_activity_log_container {
                max-height: 300px;
                overflow-y: auto;
            }

            ul.o_activity_log {
                color: $body-color;

                li {
                    .o_activity_title_entry {
                        max-width: 275px;
                        .o_activity_summary {
                            @include o-text-overflow;
                        }
                    }

                    .o_edit_button {
                        opacity: 0.5;
                    }

                    &:hover .o_edit_button{
                        opacity: 1;
                    }

                    .o_activity_link_kanban {
                        font-size: 1.5em;
                        @include o-hover-text-color($text-muted, map-get($theme-colors, 'success'));
                        @include o-hover-opacity(0.5, 1);
                    }

                    &.o_activity_selected {
                        border-bottom: 0;
                    }

                    &.o_activity_form > div {
                        padding-top: 0.5em;
                        padding-bottom: 0.7em;
                    }
                }
            }
        }
    }
}

/* summary table */
.o_mail_activity_schedule_wizard {
    .o_mail_activity_schedule_summary {
        table {
            --table-hover-bg: transparent;
            --table-active-bg: transparent;
            --table-striped-bg: transparent;
            --table-border-color: transparent;
        }

        .cursor-pointer {
            cursor: default !important;
        }

        .o_list_table {
            .o_data_cell {
                padding-top: 0px;
                padding-left: 0px;
                padding-bottom: 3px;
            }
        }

        tfoot {
            display: none;
        }

        th {
            padding: 0px;
        }

        tr {
            vertical-align: middle;
        }

        td[name="responsible_user_id"] {
            img {
                outline: none;
            }

            .o_many2one {
                display: none !important;
            }
        }
    }
    .o_outlined { // See .o_calendar_event_form_quick_create
        > i {
            color: $o-gray-600;
            text-align: center;
            width: 1rem;
        }
    }
    .note-editable {
        border: 0;
        padding: 0 !important;
    }

    // This ensures that the editor box in "log notes" will always be at least 4 lines high
    .embedded-editor-height-4 .note-editable {
        min-height: 6em;
    }
}

