[FIX] mail: fix activity form view style
* Widget's props extension broken since refactor of 55fd748a,
  resulting in the overlap of the node move plugin handle with the note
  icon on the activity scheduling wizard.
* the option to hide said plugin was missing on activity form view popup.
* the CSS styling was also missing on that popup form view.

Task-6253574

closes odoo/odoo#271137

--- a/addons/mail/static/src/scss/mail_activity.scss
+++ b/addons/mail/static/src/scss/mail_activity.scss
@@ -132,6 +132,9 @@
             }
         }
     }
+}
+
+.o_activity_details {
     .o_outlined { // See .o_calendar_event_form_quick_create
         > i {
             color: $o-gray-600;
